helloworld/auth-policy-foo.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-sleep-bar"
spec:
  selector:
    matchLabels:
      app: helloworld
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["bar.com/ns/sleep/sa/sleep"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "deny-sleep-foo"
spec:
  selector:
    matchLabels:
      app: helloworld
  action: DENY
  rules:
    - from:
        - source:
            principals: ["foo.com/ns/sleep/sa/sleep"]
